# EcoTracker

./: CMakeLists.txt  main.cpp  userdata.txt
%USERPROFILE%/Documents/EcoTracker/src/Core/: Achievement.h  ActionLogger.cpp  ActionLogger.h  EcoAction.h  FoodChoice.cpp  FoodChoice.h  UserProfile.cpp
%USERPROFILE%/Documents/EcoTracker/src/GUI/: Dashboard.cpp
src/: main.cpp
src/Core/: Achievement.cpp  Achievement.h  ActionLogger.cpp  ActionLogger.h  DailyChallenge.cpp  DailyChallenge.h  EcoAction.cpp  EcoAction.h  FoodChoice.cpp  FoodChoice.h  TransportAction.cpp  TransportAction.h  UserProfile.cpp  UserProfile.h
src/GUI/: Dashboard.cpp  Dashboard.h  Menu.cpp  Menu.h
